app/assets/stylesheets/organizations.css.scss
div.organization-logo {
  width: 200px;
  height: 100px;
  background-size: contain;
  background-position: center;
  background-repeat: no-repeat;
}

div.organization {
  margin-top: 10px;
  min-height: 150px;
}
  
@media screen and (min-width: 768px) {
  div.organization-content {
    padding-right: 200px;
  }
}

div.organization-summary {
  border-bottom: 1px solid #7ebbe4;
  padding-bottom: 10px;
  min-height: 140px;
}

div.organization-summary div.organization-logo {
  margin-top: 20px;
  margin-bottom: 20px;
}

div.organization-summary div.organization-description {
  min-height: auto;
}

span.contact-detail {
  margin-right: 20px;
  white-space: nowrap;
}

